deduplicate build code